@@ -1,3 +1,13 @@
+2005-12-28  Anders Carlsson  <andersca@mac.com>
+
+        Reviewed by Maciej.
+
+        - Add test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6268
+        Add undetectable document.all
+        
+        * fast/dom/undetectable-document-all-expected.txt: Added.
+        * fast/dom/undetectable-document-all.html: Added.
+
 2005-12-28  Mitz Pettel  <opendarwin.org@mitzpettel.com>
 
         Reviewed by Eric, landed by ap.
